Added fairy, changed to no compression

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/FaeComBuild.data.br",
-        frameworkUrl: "Build/FaeComBuild.framework.js.br",
-        codeUrl: "Build/FaeComBuild.wasm.br",
+        dataUrl: "Build/FaeComBuild.data",
+        frameworkUrl: "Build/FaeComBuild.framework.js",
+        codeUrl: "Build/FaeComBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Leugim el Cronomago",
         productName: "FaeCom",
